# structural_app

./: .env  README.md  crear_modulo.py  empaquetar_limpio.py  mi_codigo_limpio.txt  pyproject.toml  rxconfig.py  scaffold.py  structural_app.txt  structural_app1.02.txt
assets/: styles.css
structural_app/: __init__.py  structural_app.py
structural_app/assets/: styles.css
structural_app/core/: base_state.py  config_loader.py  form_registry.py  logger_config.py  session_io.py  solver_dispatcher.py  ui_state.py
structural_app/forms/_templates/complex_multiblock_form/: config.template.json  state_template.py
structural_app/forms/analisis_completo/: adapter.py  config.json
structural_app/forms/beam_double_t/: adapter.py  config.json  dto.py  page.py  sketch.py  state.py
structural_app/forms/cortante_circular/: __init__.py  adapter.py  config.json  dto.py  page.py  sketch.py  state.py  theory.py
structural_app/forms/muro/: adapter.py  config.json  dto.py  geometry_3d.py  page.py  state.py
structural_app/pages/: index.py
structural_app/shared/components/: data_table.py  form_renderer.py  generic_page.py  layout.py  muro_3d.py  result_cards.py  search_bar.py  sketch_viewer.py  status_badges.py  theory.py  toolbar.py  viewer_3d_shell.py
structural_app/shared/domain/: common_dto.py  constants.py  result_models.py  validation.py
structural_app/shared/infrastructure/: excel_export.py  pdf_export.py
structural_app/shared/services/: export_payloads.py  geometry_3d_utils.py  hash_service.py  plot_engine.py  sketch_utils.py
(+8 files in other folders)
