[tool.poetry]
name = "fhecor-structural-app"
version = "1.0.0"
description = "Plataforma profesional de cálculo estructural basada en Reflex"
authors = ["Tu Nombre <tu@email.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
reflex = ">=0.4.0"
pydantic = "^2.0"
pandas = "^2.1.0"
xlsxwriter = "^3.1.0"
numpy = "^1.24.0"
# Integración con el motor de fórmulas externo
fhecor_structuralcodes = { git = "https://github.com/MestreCarlos/fhecor_structuralcodes.git", rev = "DrrFhecor" }
structuralcodes = { git = "https://github.com/MestreCarlos/structuralcodes.git", branch = "main" }
loguru = "^0.7.3"
shapely = "2.0.7"
[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"